--- a/tasks/wait.yml
+++ b/tasks/wait.yml
@@ -46,3 +46,16 @@
     - hostvars[item]['virt_infra_state'] | default(virt_infra_state) == "running"
   with_items: "{{ play_hosts }}"
   run_once: true
+
+# This is not using wait_for module with path option anymore because it doesn't
+# work when kvmhost is remote
+- name: Wait for cloud-init to finish
+  shell: ssh {{ inventory_hostname }} stat /etc/cloud/cloud-init.disabled
+  register: result_wait_cloudinit
+  retries: 60
+  delay: 2
+  until: result_wait_cloudinit is succeeded
+  delegate_to: "{{ groups['kvmhost'][0] }}"
+  when:
+    - inventory_hostname not in groups['kvmhost']
+    - virt_infra_state == "running"
